--- a/dev/app/ads/ad-list.component.html
+++ b/dev/app/ads/ad-list.component.html
@@ -3,7 +3,7 @@
     <ul class="items">
         <li *ngFor="let ad of ads"
             (click)="onSelect(ad)">
-            <span class="badge">{{ad.id}}</span> {{ad.name}}
+            <span class="badge">{{ad.id}}</span> {{ad.title}}
         </li>
     </ul>
 </div>
