--- a/dev/app/ads/ad-list.component.html
+++ b/dev/app/ads/ad-list.component.html
@@ -2,8 +2,12 @@
     <h2>ADS</h2>
     <ul class="items">
         <li *ngFor="let ad of ads"
-            (click)="onSelect(ad)">
+            (click)="onSelect(ad)"
+            [class.selected]="ad === selectedAd">
             <span class="badge">{{ad.id}}</span> {{ad.title}}
         </li>
     </ul>
+    <div>
+    	<button (click)="newAd()">New Ad</button>
+    </div>
 </div>
