--- a/dev/app/ads/ad-detail.component.html
+++ b/dev/app/ads/ad-detail.component.html
@@ -7,7 +7,7 @@
         </div>
         <div>
             <label>Title: </label>
-            <input [(ngModel)]="ad.title | upperCase" placeholder="title"/>
+            <input [(ngModel)]="ad.title" placeholder="title"/>
 
             <label>Category: </label>
             <input [(ngModel)]="ad.category" placeholder="category"/>
