--- a/dev/app/register/register.component.html
+++ b/dev/app/register/register.component.html
@@ -1,77 +1,102 @@
 <div class='register'>
-	<form (ngSubmit)="onSubmit()" #registrationForm="ngForm" novalidate role="form" class="form-horizontal">
-		<div class="form-group">
+	<form (ngSubmit)="onSubmit()" #registrationForm="ngForm" role="form" class="form-horizontal">
+		<div class="form-group col-sm-10">
 			<label for="username" class="control-label col-sm-2">Username</label>
             <div class="col-sm-4">
-			    <input type="text" id="username" class="form-control" placeholder="Username" [(ngModel)]="Register.username"
-                       ngControl="username" #username="ngForm" required>
+			    <input type="text" id="username" class="form-control" placeholder="Username" required
+                [(ngModel)]="model.username" name="username" #username="ngModel">
             </div>
             <div [hidden]="username.valid || username.pristine" class="alert alert-danger">Username is required!</div>
 		</div>
+
         <br>
-        <div class="form-group">
+
+        <div class="form-group col-sm-10">
 			<label for="password1" class="control-label col-sm-2">Password</label>
             <div class="col-sm-4">
-			    <input type="password" id="password1" class="form-control" placeholder="Password" [(ngModel)]="Register.password" required>
+			    <input type="password" id="password1" class="form-control" placeholder="Password" required
+                [(ngModel)]="model.password" name="password1" #password1="ngModel">
             </div>
+            <div [hidden]="password1.valid || password1.pristine" class="alert alert-danger">Password is required!</div>
             <div class="col-sm-4">
-			    <input type="password" id="password2" class="form-control" placeholder="Repeate Password" required>
+			    <input type="password" id="password2" class="form-control" placeholder="Repeate Password" required
+                name="password2">
             </div>
+            <div [hidden]="password2 === password1 || password2.pristine" class="alert alert-danger">Password is required!</div>
 		</div>
+
         <br>
+
         <div class="form-group">
-			<label for="namesFirst" class="control-label col-sm-2">First Name</label>
+            <label for="namesFirst" class="control-label col-sm-2">First Name</label>
             <div class="col-sm-4">
-                <input type="text" id="namesFirst" class="form-control" placeholder="First Name" [(ngModel)]="Register.namesFirst">
+                <input type="text" id="namesFirst" class="form-control" placeholder="First Name" 
+                [(ngModel)]="model.namesFirst" name="namesFirst" #namesFirst="ngModel">
             </div>
-		</div>
+        </div>
         <div class="form-group">
 			<label for="namesLast" class="control-label col-sm-2">Last Name</label>
             <div class="col-sm-4">
-			    <input type="text" id="namesLast" class="form-control" placeholder="Last Name" [(ngModel)]="Register.namesLast">
+			    <input type="text" id="namesLast" class="form-control" placeholder="Last Name" 
+                [(ngModel)]="model.namesLast" name="namesLast" #namesLast="ngModel">
             </div>
 		</div>
+
         <br>
+
         <div class="form-group">
 			<label for="email" class="control-label col-sm-2">Email</label>
             <div class="col-sm-4">
-			    <input type="email" id="email" class="form-control" placeholder="Email" [(ngModel)]="Register.email">
+			    <input type="email" id="email" class="form-control" placeholder="Email" 
+                [(ngModel)]="model.email" name="email" #email="ngModel">
             </div>
 		</div>
+
         <br>
+
         <div class="form-group">
 			<label for="phone1" class="control-label col-sm-2">Phones</label>
             <div class="col-sm-4">
-			    <input type="text" id="phone1" class="form-control" placeholder="Phone" [(ngModel)]="Register.phone1">
+			    <input type="text" id="phone1" class="form-control" placeholder="Phone" 
+                [(ngModel)]="model.phone1" name="phone1" #phone1="ngModel">
             </div>
             <div class="col-sm-4">
-			    <input type="text" id="phone2" class="form-control" placeholder="Phone" [(ngModel)]="Register.phone2">
+			    <input type="text" id="phone2" class="form-control" placeholder="Phone" 
+                [(ngModel)]="model.phone2" name="phone2" #phone2="ngModel">
             </div>
 		</div>
+
         <br>
+
         <div class="form-group">
 			<label for="skypeId" class="control-label col-sm-2">Skype Id</label>
             <div class="col-sm-4">
-			    <input type="text" id="skypeId" class="form-control" placeholder="Skype" [(ngModel)]="Register.skypeId">
+			    <input type="text" id="skypeId" class="form-control" placeholder="Skype" 
+                [(ngModel)]="model.skypeId" name="skypeId" #skypeId="ngModel">
             </div>
 		</div>
+
         <br>
+
         <div class="form-group">
 			<label for="photo" class="control-label col-sm-2">Photo</label>
             <div class="col-sm-4">
-			    <input type="text" id="photo" class="form-control" placeholder="Photo" [(ngModel)]="Register.photo">
+			    <input type="text" id="photo" class="form-control" placeholder="Photo">
             </div>
 		</div>
+
         <br>
+
         <div class="form-group">
 			<label for="role" class="control-label col-sm-2">Role</label>
             <div class="col-sm-4">
-			    <input type="text" id="role" class="form-control" placeholder="Role" [(ngModel)]="Register.role">
+			    <input type="text" id="role" class="form-control" placeholder="Role" 
+                [(ngModel)]="model.role" name="role" #role="ngModel">
             </div>
 		</div>
         <br>
         <div style="text-align: right">
-            <button type="submit" class="btn btn-success" [disabled]="!registrationForm.form.valid" >Submit</button>
+            <button type="submit" class="btn btn-success" [disabled]="!registrationForm.form.valid">Submit</button>
         </div>
 	</form>
 </div>
