--- a/dev/app/home/home.component.html
+++ b/dev/app/home/home.component.html
@@ -1,3 +1,12 @@
 <div class='home'>
-	<h1>home.component.html</h1>
+    <div class="col-md-10">
+        <div class="categories-container">
+        Categories:
+        	<ul>
+				<li *ngFor="let category of categories">
+				Ctegory: {{category}}
+				</li>
+        	</ul>
+        </div>
+    </div>
 </div>
