--- a/dev/app/register/register.component.html
+++ b/dev/app/register/register.component.html
@@ -78,11 +78,14 @@
         </div>
 
         <div class="form-group row">
-            <label for="photo" class="col-sm-2 col-form-label">User Photo</label>
+            <label for="photo" class="col-sm-2 col-form-label">
+                <i class="ion-document icon"></i> User Photo
+            </label>
             <div class="col-sm-3">
                 <input type="file" class="form-control" id="photo" placeholder="Photo"
-                    [(ngModel)]="user.photo" (change)="imgChange($event)" name="photo" #photo="ngModel" >
-                <img class="user-image">
+                [(ngModel)]="user.photo" (change)="imgChange($event)" name="photo" #photo="ngModel" >
+                <img class="user-image" src="/images/kermit.jpg">
+                <span>{{percent}}</span>
             </div>
         </div>
 
