--- a/dev/app/register/register.component.css
+++ b/dev/app/register/register.component.css
@@ -1,19 +1,63 @@
-.form-heading {
-    margin-bottom: 20px;
-}
 .register-container {
     padding: 2%;
 }
+
+.form-heading {
+    margin-bottom: 40px;
+    font-variant: small-caps;
+    font-weight: 700;
+    color: #666666;
+}
+
+small {
+	color: #888888;
+	vertical-align: -20%;
+}
+
+label {
+	font-variant: small-caps;
+}
+
 .ng-valid[required] {
     border-left: 5px solid #42A948;
 }
+
 .ng-invalid {
     border-left: 5px solid #a94442;
 }
+
+.user-image {
+	min-height: 200px;
+}
+
+#photo {
+	min-height: 200px;
+	width: auto;
+}
+
+.admin-data {
+	width: 70%;
+	display: inline-block;
+	padding: 10px;
+	border: 1px solid black;
+	background-color: #eee;
+}
+
 .form-control-btns {
     margin-top: 5%;
     text-align: right;
 }
+
 .btn {
     margin-left: 10px;
+}
+
+.user-image-input {
+	margin: 20px;
+	border: 1px solid #cccccc;
+	float: left;
+
+	min-width: 300px;
+	max-width: 500px;
+	height: auto;
 }
